<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="150dp">

        <ImageView
            android:id="@+id/exit_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_exit"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/text_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/dogs_list"
            android:textColor="@color/surface_light"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/ten_dp"
        app:cardElevation="@dimen/five_dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/breed_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/two_hundred_dp"
                android:layout_marginBottom="@dimen/ten_dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/breed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"
                android:background="@drawable/rectangual_border"
                android:padding="@dimen/fifteen_dp"
                android:text="@string/breed_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breed_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/five_dp"
                android:background="@drawable/rectangual_border"
                android:padding="@dimen/fifteen_dp"
                android:text="@string/breed_origin"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breed_temparement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/five_dp"
                android:background="@drawable/rectangual_border"
                android:padding="@dimen/fifteen_dp"
                android:text="@string/breed_temparament"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/breed_catagory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:padding="@dimen/fifteen_dp"
                android:text="@string/breed_catagory"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
